test/arrays/errors/overrideNoWarnings.compopts
--no-warnings --warn-array-of-range
